endpoint変更、型変更
/manifest => /api/manifest
Manifestを最新と複合に分割
