# packages/hiyocord-nexus-types/src/index.ts
@@ -4,5 +4,6 @@ export type { APIInteraction } from "discord-api-types/v10";
 
 import { components } from './types';
 
-export type Manifest = components["schemas"]["Manifest"]
+export type ManifestAnyVersion = components["schemas"]["ManifestAnyVersion"]
+export type ManifestLatestVersion = components["schemas"]["ManifestLatestVersion"]
 export type DiscordCommand = components["schemas"]["DiscordCommand"]
